--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "input generator for kozo demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "mqtt": "^4.3.7"
   }
 }
